[tool.poetry]
name = "rightmove_webscraper"
version = "0.1.2"
description = "rightmove.co.uk webscraper"
authors = ["santiagonasar <santiagonasar>"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.3.4"
numpy = "^1.21.4"
certifi = "2021.10.8"
chardet = "3.0.2"

[tool.poetry.dev-dependencies]
lxml = "4.6.4"
python-dateutil = "2.8.2"
pytz = "2021.3"
requests = "2.22.0"
six = "^1.16.0"
urllib3 = "1.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
